--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context="com.java.a31.androidappproject.main.MainActivity">
 
+    <com.java.a31.androidappproject.main.SearchView
+        android:id="@+id/main_search_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.java.a31.androidappproject.main.SearchView>
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
