--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -4,14 +4,20 @@
 
     <item
         android:id="@+id/share"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_share_white_24dp"
         android:title="@string/share" />
 
     <item
         android:id="@+id/star"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_star_white_24dp"
         android:title="@string/star" />
+
+    <item
+        android:id="@+id/read"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_keyboard_voice_white_24dp"
+        android:title="@string/read" />
 
 </menu>
