--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/colorBaseBackground"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -18,42 +19,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="@dimen/dp_40"
-            app:expandedTitleMarginEnd="@dimen/dp_72"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:contentScrim="@color/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|enterAlways">
 
-            <FrameLayout
+            <ImageView
+                android:id="@+id/detail_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax">
-
-                <ImageView
-                    android:id="@+id/detail_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@null"
-                    android:scaleType="centerCrop" />
-
-                <TextView
-                    android:id="@+id/detail_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginBottom="@dimen/primary_margin"
-                    android:padding="@dimen/primary_margin"
-                    android:textColor="@android:color/white" />
-
-            </FrameLayout>
+                android:scaleType="centerCrop"
+                android:scrollbarStyle="insideInset"
+                android:src="@drawable/placeholder"
+                android:scrollbarAlwaysDrawVerticalTrack="true" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                android:background="@android:color/transparent" />
+                app:theme="@style/ThemeOverlay.AppCompat.Dark"
+                android:background="@android:color/transparent"
+                app:titleTextColor="@drawable/nav_item_color" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -69,7 +55,9 @@
             android:id="@+id/detail_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="@dimen/body_text_size"/>
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="@dimen/body_text_size"
+            android:lineSpacingMultiplier="1.2"/>
 
     </android.support.v4.widget.NestedScrollView>
 
