--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBaseBackground"
     tools:context="com.java.a31.androidappproject.main.MainActivity">
-
-    <!--<com.java.a31.androidappproject.main.SearchView-->
-        <!--android:id="@+id/main_search_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-    <!--</com.java.a31.androidappproject.main.SearchView>-->
 
     <FrameLayout
         android:id="@+id/container"
@@ -24,7 +19,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/colorBaseBackground"
+        app:itemIconTint="@drawable/nav_item_color"
+        app:itemTextColor="@drawable/nav_item_color"
+        android:gravity="bottom"
+        android:focusable="true"
+        android:clickable="true"
+        app:elevation="8dp"
         app:menu="@menu/navigation" />
 
 </LinearLayout>
