--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBaseBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,15 +11,16 @@
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.v7.widget.SearchView
+        <com.lapism.searchview.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40" />
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
+            android:layout_height="wrap_content"
             app:tabMode="scrollable" />
 
     </android.support.design.widget.AppBarLayout>
