--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -4,19 +4,19 @@
 
     <item
         android:id="@+id/share"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_share_white_24dp"
         android:title="@string/share" />
 
     <item
         android:id="@+id/star"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_star_white_24dp"
         android:title="@string/star" />
 
     <item
         android:id="@+id/read"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:icon="@drawable/ic_keyboard_voice_white_24dp"
         android:title="@string/read" />
 
