--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,6 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBaseBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,6 +14,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
+            app:titleTextColor="@color/colorPrimaryText"
             app:title="@string/settings" />
 
     </android.support.design.widget.AppBarLayout>
@@ -23,6 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/preference_container"
-        android:layout_marginTop="?actionBarSize"/>
+        android:layout_marginTop="?actionBarSize" />
 
 </android.support.design.widget.CoordinatorLayout>
