--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,38 +1,29 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBaseBackground"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="5dp"
-        android:background="#FFFFFF"
-        android:orientation="horizontal">
+        <com.lapism.searchview.SearchView
+            android:id="@+id/result_search_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_behavior="com.lapism.searchview.SearchBehavior"
+            android:paddingBottom="@dimen/primary_margin_half" />
 
-        <Button
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="right|center_vertical"
-            android:layout_margin="10dp"
-            android:background="@drawable/ic_search_black_24dp" />
-        <!-- 输入的搜索信息 -->
-        <EditText
-            android:id="@+id/et_search"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="4"
-            android:background="@null"
-            android:gravity="center_vertical"
-            android:hint="输入内容进行搜索"
-            android:imeOptions="actionSearch"
-            android:textColor="#0e0e0e"
-            android:textColorHint="#b0c6ce"
-            android:textSize="17sp" />
-    </LinearLayout>
+    </android.support.design.widget.AppBarLayout>
 
+    <FrameLayout
+        android:id="@+id/result_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
