--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -15,7 +15,8 @@
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_behavior="com.lapism.searchview.SearchBehavior" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
