--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -18,11 +18,28 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:layout_behavior="com.lapism.searchview.SearchBehavior" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
+        <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable" />
+            android:orientation="horizontal">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:tabMode="scrollable" />
+
+            <ImageView
+                android:id="@+id/add_channel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:maxHeight="?attr/actionBarSize"
+                android:padding="@dimen/primary_margin_half"
+                android:src="@drawable/ic_add_white_24dp"/>
+
+        </android.support.v7.widget.LinearLayoutCompat>
 
     </android.support.design.widget.AppBarLayout>
 
