--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,4 +11,6 @@
 
     <color name="colorNavItemSelected">#03A9F4</color>
     <color name="colorNavItemUnselected">#8799a5</color>
+
+    <color name="blue">#0000FF</color>
 </resources>
