--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -51,18 +51,25 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:id="@+id/detail_content"
+        <LinearLayout
+            android:id="@+id/detail_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/colorPrimaryText"
-            android:textSize="@dimen/body_text_size"
-            android:layout_marginTop="@dimen/primary_margin"
-            android:layout_marginBottom="@dimen/primary_margin"
-            android:layout_marginLeft="@dimen/primary_margin"
-            android:layout_marginRight="@dimen/primary_margin"
-            android:textColorLink="@android:color/holo_blue_dark"
-            android:lineSpacingMultiplier="1.2"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/detail_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="@dimen/body_text_size"
+                android:layout_marginTop="@dimen/primary_margin"
+                android:layout_marginBottom="@dimen/primary_margin"
+                android:layout_marginLeft="@dimen/primary_margin"
+                android:layout_marginRight="@dimen/primary_margin"
+                android:textColorLink="@android:color/holo_blue_dark"
+                android:lineSpacingMultiplier="1.2"/>
+        </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
